fix: room api field
