# docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /v1
 definitions:
   controller.ResponseTask:
     properties:
@@ -87,6 +88,8 @@ definitions:
     properties:
       createdAt:
         type: string
+      goal:
+        type: string
       id:
         type: integer
       name:
@@ -115,7 +118,16 @@ definitions:
         type: string
     type: object
 info:
-  contact: {}
+  contact:
+    email: minkj1992@gmail.com
+    name: API Support
+    url: https://minkj1992.github.io
+  description: This is a pitch api server.
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
+  title: Pitch API Server (dobby's)
+  version: "1.0"
 paths:
   /rooms:
     get:
